@@ -19,8 +19,8 @@ use overload
 	fallback => 1;
 
 sub new {
-	my ($class, $list, $node) = @_;
-	my $self = bless [ $node, $list ], $class;
+	my ($class, $node) = @_;
+	my $self = bless [ $node ], $class;
 	weaken $self->[0];
 	Internals::SvREADONLY(@{$self}, 1);
 	return $self;
@@ -36,40 +36,50 @@ sub get {
 
 sub next {
 	my $self = shift;
-	my ($node, $list) = @{$self};
+	my $node  = $self->[0];
 	croak 'Node no longer exists' if not defined $node;
-	return __PACKAGE__->new($list, $node->{next});
+	return __PACKAGE__->new($node->{next});
 }
 
 sub previous {
 	my $self = shift;
-	my ($node, $list) = @{$self};
+	my $node  = $self->[0];
 	croak 'Node no longer exists' if not defined $node;
-	return __PACKAGE__->new($list, $node->{prev});
-}
-
-sub remove {
-	my $self = shift;
-	my ($node, $list) = @{$self};
-	croak 'Node already removed' if not defined $node;
-
-	my $item = $node->{item};
-	weaken $node;
-	$list->erase($self);
-
-	return $item;
+	return __PACKAGE__->new($node->{prev});
 }
 
 sub insert_before {
 	my ($self, @items) = @_;
-	my ($node, $list)  = @{$self};
-	return $list->insert_before($self, @items);
+	my $node  = $self->[0];
+	for my $item (reverse @items) {
+		my $new_node = {
+			item => $item,
+			prev => $node->{prev},
+			next => $node,
+		};
+		$node->{prev}{next} = $new_node;
+		$node->{prev} = $new_node;
+
+		$node = $new_node;
+	}
+	return;
 }
 
 sub insert_after {
 	my ($self, @items) = @_;
-	my ($node, $list)  = @{$self};
-	return $list->insert_after($self, @items);
+	my $node  = $self->[0];
+	for my $item (@items) {
+		my $new_node = {
+			item => $item,
+			prev => $node,
+			next => $node->{next},
+		};
+		$node->{next}{prev} = $new_node;
+		$node->{next} = $new_node;
+
+		$node = $new_node;
+	}
+	return;
 }
 
 # ABSTRACT: Double Linked List Iterators
